SEN-20: Get joular and ck data endpoint (#21)
* add GET /api/v1/joular-entities

* add GET /api/joular-entities/by-commit/{id} working

* Add mongodb volume to keep the data in storage

* Beginning of GET ck-entities/by-commit and GET joular-entities/by-commit

* Refactor: remove ckEntityRepositoryAggregation from CkServiceImpl and rename CkResource to CkJoularResource

* Refactor: add CommitEntityService interface

* Refactor: change CkEntityServiceImpl by CkEntityService call in CkJoularResource

* Refactor: change JoularEntityServiceImpl by JoularEntityService in CkJoularResource

* Change exceptions place

* Update ExceptionTranslator.java

* GET /ck-entities/by-commit-and-metric working

* refactor MeasurableElementDTO

* refactoring working

* GET /ck-entities/by-commit-and-ast-elem working

* GET joular-entities/by-commit-and-ast-elem working